# Copyright (c) 2015, Pivotal Software, Inc. All Rights Reserved.

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libgpopt/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libgpdbcost/include)
add_library(naucrates SHARED
            src/CDXLUtils.cpp
            src/CIdGenerator.cpp
            src/exception.cpp
            src/init.cpp
            src/traceflags.cpp
            src/base/CDatumBoolGPDB.cpp
            src/base/CDatumGenericGPDB.cpp
            src/base/CDatumInt2GPDB.cpp
            src/base/CDatumInt4GPDB.cpp
            src/base/CDatumInt8GPDB.cpp
            src/base/CDatumOidGPDB.cpp
            src/base/CQueryToDXLResult.cpp
            src/base/IDatumStatisticsMappable.cpp
            src/comm/CCommunicator.cpp
            src/comm/CLoggerComm.cpp
            src/md/CDXLBucket.cpp
            src/md/CDXLColStats.cpp
            src/md/CDXLRelStats.cpp
            src/md/CDXLStatsDerivedColumn.cpp
            src/md/CDXLStatsDerivedRelation.cpp
            src/md/CMDAggregateGPDB.cpp
            src/md/CMDCastGPDB.cpp
            src/md/CMDCheckConstraintGPDB.cpp
            src/md/CMDColumn.cpp
            src/md/CMDFunctionGPDB.cpp
            src/md/CMDIdCast.cpp
            src/md/CMDIdColStats.cpp
            src/md/CMDIdGPDB.cpp
            src/md/CMDIdGPDBCtas.cpp
            src/md/CMDIdRelStats.cpp
            src/md/CMDIdScCmp.cpp
            src/md/CMDIndexGPDB.cpp
            src/md/CMDName.cpp
            src/md/CMDPartConstraintGPDB.cpp
            src/md/CMDProviderComm.cpp
            src/md/CMDProviderCommProxy.cpp
            src/md/CMDProviderGeneric.cpp
            src/md/CMDProviderMemory.cpp
            src/md/CMDRelationCtasGPDB.cpp
            src/md/CMDRelationExternalGPDB.cpp
            src/md/CMDRelationGPDB.cpp
            src/md/CMDRequest.cpp
            src/md/CMDScalarOpGPDB.cpp
            src/md/CMDScCmpGPDB.cpp
            src/md/CMDTriggerGPDB.cpp
            src/md/CMDTypeBoolGPDB.cpp
            src/md/CMDTypeGenericGPDB.cpp
            src/md/CMDTypeInt2GPDB.cpp
            src/md/CMDTypeInt4GPDB.cpp
            src/md/CMDTypeInt8GPDB.cpp
            src/md/CMDTypeOidGPDB.cpp
            src/md/CMDUtilsGPDB.cpp
            src/md/CSystemId.cpp
            src/md/IMDCacheObject.cpp
            src/md/IMDIndex.cpp
            src/md/IMDProvider.cpp
            src/md/IMDRelation.cpp
            src/md/IMDType.cpp
            src/operators/CDXLColDescr.cpp
            src/operators/CDXLColRef.cpp
            src/operators/CDXLCtasStorageOptions.cpp
            src/operators/CDXLDatum.cpp
            src/operators/CDXLDatumBool.cpp
            src/operators/CDXLDatumGeneric.cpp
            src/operators/CDXLDatumInt2.cpp
            src/operators/CDXLDatumInt4.cpp
            src/operators/CDXLDatumInt8.cpp
            src/operators/CDXLDatumOid.cpp
            src/operators/CDXLDatumStatsDoubleMappable.cpp
            src/operators/CDXLDatumStatsLintMappable.cpp
            src/operators/CDXLDirectDispatchInfo.cpp
            src/operators/CDXLIndexDescr.cpp
            src/operators/CDXLLogical.cpp
            src/operators/CDXLLogicalConstTable.cpp
            src/operators/CDXLLogicalCTAS.cpp
            src/operators/CDXLLogicalCTEAnchor.cpp
            src/operators/CDXLLogicalCTEConsumer.cpp
            src/operators/CDXLLogicalCTEProducer.cpp
            src/operators/CDXLLogicalDelete.cpp
            src/operators/CDXLLogicalExternalGet.cpp
            src/operators/CDXLLogicalGet.cpp
            src/operators/CDXLLogicalGroupBy.cpp
            src/operators/CDXLLogicalInsert.cpp
            src/operators/CDXLLogicalJoin.cpp
            src/operators/CDXLLogicalLimit.cpp
            src/operators/CDXLLogicalProject.cpp
            src/operators/CDXLLogicalSelect.cpp
            src/operators/CDXLLogicalSetOp.cpp
            src/operators/CDXLLogicalTVF.cpp
            src/operators/CDXLLogicalUpdate.cpp
            src/operators/CDXLLogicalWindow.cpp
            src/operators/CDXLNode.cpp
            src/operators/CDXLOperator.cpp
            src/operators/CDXLOperatorCost.cpp
            src/operators/CDXLOperatorFactory.cpp
            src/operators/CDXLPhysical.cpp
            src/operators/CDXLPhysicalAbstractBitmapScan.cpp
            src/operators/CDXLPhysicalAgg.cpp
            src/operators/CDXLPhysicalAppend.cpp
            src/operators/CDXLPhysicalAssert.cpp
            src/operators/CDXLPhysicalBitmapTableScan.cpp
            src/operators/CDXLPhysicalBroadcastMotion.cpp
            src/operators/CDXLPhysicalCTAS.cpp
            src/operators/CDXLPhysicalCTEConsumer.cpp
            src/operators/CDXLPhysicalCTEProducer.cpp
            src/operators/CDXLPhysicalDML.cpp
            src/operators/CDXLPhysicalDynamicBitmapTableScan.cpp
            src/operators/CDXLPhysicalDynamicIndexScan.cpp
            src/operators/CDXLPhysicalDynamicTableScan.cpp
            src/operators/CDXLPhysicalExternalScan.cpp
            src/operators/CDXLPhysicalGatherMotion.cpp
            src/operators/CDXLPhysicalHashJoin.cpp
            src/operators/CDXLPhysicalIndexOnlyScan.cpp
            src/operators/CDXLPhysicalIndexScan.cpp
            src/operators/CDXLPhysicalJoin.cpp
            src/operators/CDXLPhysicalLimit.cpp
            src/operators/CDXLPhysicalMaterialize.cpp
            src/operators/CDXLPhysicalMergeJoin.cpp
            src/operators/CDXLPhysicalMotion.cpp
            src/operators/CDXLPhysicalNLJoin.cpp
            src/operators/CDXLPhysicalPartitionSelector.cpp
            src/operators/CDXLPhysicalProperties.cpp
            src/operators/CDXLPhysicalRandomMotion.cpp
            src/operators/CDXLPhysicalRedistributeMotion.cpp
            src/operators/CDXLPhysicalResult.cpp
            src/operators/CDXLPhysicalRoutedDistributeMotion.cpp
            src/operators/CDXLPhysicalRowTrigger.cpp
            src/operators/CDXLPhysicalSequence.cpp
            src/operators/CDXLPhysicalSharedScan.cpp
            src/operators/CDXLPhysicalSort.cpp
            src/operators/CDXLPhysicalSplit.cpp
            src/operators/CDXLPhysicalSubqueryScan.cpp
            src/operators/CDXLPhysicalTableScan.cpp
            src/operators/CDXLPhysicalTVF.cpp
            src/operators/CDXLPhysicalWindow.cpp
            src/operators/CDXLProperties.cpp
            src/operators/CDXLScalar.cpp
            src/operators/CDXLScalarAggref.cpp
            src/operators/CDXLScalarArray.cpp
            src/operators/CDXLScalarArrayComp.cpp
            src/operators/CDXLScalarArrayRef.cpp
            src/operators/CDXLScalarArrayRefIndexList.cpp
            src/operators/CDXLScalarAssertConstraint.cpp
            src/operators/CDXLScalarAssertConstraintList.cpp
            src/operators/CDXLScalarBitmapBoolOp.cpp
            src/operators/CDXLScalarBitmapIndexProbe.cpp
            src/operators/CDXLScalarBooleanTest.cpp
            src/operators/CDXLScalarBoolExpr.cpp
            src/operators/CDXLScalarCaseTest.cpp
            src/operators/CDXLScalarCast.cpp
            src/operators/CDXLScalarCoalesce.cpp
            src/operators/CDXLScalarCoerceToDomain.cpp
            src/operators/CDXLScalarComp.cpp
            src/operators/CDXLScalarConstValue.cpp
            src/operators/CDXLScalarDistinctComp.cpp
            src/operators/CDXLScalarDMLAction.cpp
            src/operators/CDXLScalarFilter.cpp
            src/operators/CDXLScalarFuncExpr.cpp
            src/operators/CDXLScalarHashCondList.cpp
            src/operators/CDXLScalarHashExpr.cpp
            src/operators/CDXLScalarHashExprList.cpp
            src/operators/CDXLScalarIdent.cpp
            src/operators/CDXLScalarIfStmt.cpp
            src/operators/CDXLScalarIndexCondList.cpp
            src/operators/CDXLScalarInitPlan.cpp
            src/operators/CDXLScalarJoinFilter.cpp
            src/operators/CDXLScalarLimitCount.cpp
            src/operators/CDXLScalarLimitOffset.cpp
            src/operators/CDXLScalarMergeCondList.cpp
            src/operators/CDXLScalarMinMax.cpp
            src/operators/CDXLScalarNullIf.cpp
            src/operators/CDXLScalarNullTest.cpp
            src/operators/CDXLScalarOneTimeFilter.cpp
            src/operators/CDXLScalarOpExpr.cpp
            src/operators/CDXLScalarOpList.cpp
            src/operators/CDXLScalarPartBound.cpp
            src/operators/CDXLScalarPartBoundInclusion.cpp
            src/operators/CDXLScalarPartBoundOpen.cpp
            src/operators/CDXLScalarPartDefault.cpp
            src/operators/CDXLScalarPartOid.cpp
            src/operators/CDXLScalarProjElem.cpp
            src/operators/CDXLScalarProjList.cpp
            src/operators/CDXLScalarRecheckCondFilter.cpp
            src/operators/CDXLScalarSortCol.cpp
            src/operators/CDXLScalarSortColList.cpp
            src/operators/CDXLScalarSubPlan.cpp
            src/operators/CDXLScalarSubquery.cpp
            src/operators/CDXLScalarSubqueryAll.cpp
            src/operators/CDXLScalarSubqueryAny.cpp
            src/operators/CDXLScalarSubqueryExists.cpp
            src/operators/CDXLScalarSubqueryNotExists.cpp
            src/operators/CDXLScalarSubqueryQuantified.cpp
            src/operators/CDXLScalarSwitch.cpp
            src/operators/CDXLScalarSwitchCase.cpp
            src/operators/CDXLScalarWindowFrameEdge.cpp
            src/operators/CDXLScalarWindowRef.cpp
            src/operators/CDXLSpoolInfo.cpp
            src/operators/CDXLTableDescr.cpp
            src/operators/CDXLWindowFrame.cpp
            src/operators/CDXLWindowKey.cpp
            src/operators/CDXLWindowSpec.cpp
            src/parser/CParseHandlerAgg.cpp
            src/parser/CParseHandlerAppend.cpp
            src/parser/CParseHandlerArray.cpp
            src/parser/CParseHandlerAssert.cpp
            src/parser/CParseHandlerBase.cpp
            src/parser/CParseHandlerBroadcastMotion.cpp
            src/parser/CParseHandlerColDescr.cpp
            src/parser/CParseHandlerColStats.cpp
            src/parser/CParseHandlerColStatsBucket.cpp
            src/parser/CParseHandlerCondList.cpp
            src/parser/CParseHandlerCost.cpp
            src/parser/CParseHandlerCostModel.cpp
            src/parser/CParseHandlerCostParam.cpp
            src/parser/CParseHandlerCostParams.cpp
            src/parser/CParseHandlerCtasStorageOptions.cpp
            src/parser/CParseHandlerCTEConfig.cpp
            src/parser/CParseHandlerCTEList.cpp
            src/parser/CParseHandlerDefaultValueExpr.cpp
            src/parser/CParseHandlerDirectDispatchInfo.cpp
            src/parser/CParseHandlerDistinctComp.cpp
            src/parser/CParseHandlerDummy.cpp
            src/parser/CParseHandlerDXL.cpp
            src/parser/CParseHandlerDynamicIndexScan.cpp
            src/parser/CParseHandlerDynamicTableScan.cpp
            src/parser/CParseHandlerEnumeratorConfig.cpp
            src/parser/CParseHandlerExternalScan.cpp
            src/parser/CParseHandlerFactory.cpp
            src/parser/CParseHandlerFilter.cpp
            src/parser/CParseHandlerGatherMotion.cpp
            src/parser/CParseHandlerGroupingColList.cpp
            src/parser/CParseHandlerHashExpr.cpp
            src/parser/CParseHandlerHashExprList.cpp
            src/parser/CParseHandlerHashJoin.cpp
            src/parser/CParseHandlerHint.cpp
            src/parser/CParseHandlerIndexCondList.cpp
            src/parser/CParseHandlerIndexDescr.cpp
            src/parser/CParseHandlerIndexOnlyScan.cpp
            src/parser/CParseHandlerIndexScan.cpp
            src/parser/CParseHandlerLimit.cpp
            src/parser/CParseHandlerLogicalConstTable.cpp
            src/parser/CParseHandlerLogicalCTAS.cpp
            src/parser/CParseHandlerLogicalCTEAnchor.cpp
            src/parser/CParseHandlerLogicalCTEConsumer.cpp
            src/parser/CParseHandlerLogicalCTEProducer.cpp
            src/parser/CParseHandlerLogicalDelete.cpp
            src/parser/CParseHandlerLogicalExternalGet.cpp
            src/parser/CParseHandlerLogicalGet.cpp
            src/parser/CParseHandlerLogicalGroupBy.cpp
            src/parser/CParseHandlerLogicalInsert.cpp
            src/parser/CParseHandlerLogicalJoin.cpp
            src/parser/CParseHandlerLogicalLimit.cpp
            src/parser/CParseHandlerLogicalOp.cpp
            src/parser/CParseHandlerLogicalProject.cpp
            src/parser/CParseHandlerLogicalSelect.cpp
            src/parser/CParseHandlerLogicalSetOp.cpp
            src/parser/CParseHandlerLogicalTVF.cpp
            src/parser/CParseHandlerLogicalUpdate.cpp
            src/parser/CParseHandlerLogicalWindow.cpp
            src/parser/CParseHandlerManager.cpp
            src/parser/CParseHandlerMaterialize.cpp
            src/parser/CParseHandlerMDCast.cpp
            src/parser/CParseHandlerMDGPDBAgg.cpp
            src/parser/CParseHandlerMDGPDBCheckConstraint.cpp
            src/parser/CParseHandlerMDGPDBFunc.cpp
            src/parser/CParseHandlerMDGPDBScalarOp.cpp
            src/parser/CParseHandlerMDGPDBTrigger.cpp
            src/parser/CParseHandlerMDIndex.cpp
            src/parser/CParseHandlerMDRelation.cpp
            src/parser/CParseHandlerMDRelationCtas.cpp
            src/parser/CParseHandlerMDRelationExternal.cpp
            src/parser/CParseHandlerMDRequest.cpp
            src/parser/CParseHandlerMDScCmp.cpp
            src/parser/CParseHandlerMDType.cpp
            src/parser/CParseHandlerMergeJoin.cpp
            src/parser/CParseHandlerMetadata.cpp
            src/parser/CParseHandlerMetadataColumn.cpp
            src/parser/CParseHandlerMetadataColumns.cpp
            src/parser/CParseHandlerMetadataIdList.cpp
            src/parser/CParseHandlerMetadataObject.cpp
            src/parser/CParseHandlerNLJoin.cpp
            src/parser/CParseHandlerOp.cpp
            src/parser/CParseHandlerOptimizerConfig.cpp
            src/parser/CParseHandlerPartitionSelector.cpp
            src/parser/CParseHandlerPhysicalAbstractBitmapScan.cpp
            src/parser/CParseHandlerPhysicalBitmapTableScan.cpp
            src/parser/CParseHandlerPhysicalCTAS.cpp
            src/parser/CParseHandlerPhysicalCTEConsumer.cpp
            src/parser/CParseHandlerPhysicalCTEProducer.cpp
            src/parser/CParseHandlerPhysicalDML.cpp
            src/parser/CParseHandlerPhysicalDynamicBitmapTableScan.cpp
            src/parser/CParseHandlerPhysicalOp.cpp
            src/parser/CParseHandlerPhysicalRowTrigger.cpp
            src/parser/CParseHandlerPhysicalSplit.cpp
            src/parser/CParseHandlerPhysicalTVF.cpp
            src/parser/CParseHandlerPhysicalWindow.cpp
            src/parser/CParseHandlerPlan.cpp
            src/parser/CParseHandlerProjElem.cpp
            src/parser/CParseHandlerProjList.cpp
            src/parser/CParseHandlerProperties.cpp
            src/parser/CParseHandlerQuery.cpp
            src/parser/CParseHandlerQueryOutput.cpp
            src/parser/CParseHandlerRandomMotion.cpp
            src/parser/CParseHandlerRedistributeMotion.cpp
            src/parser/CParseHandlerRelStats.cpp
            src/parser/CParseHandlerResult.cpp
            src/parser/CParseHandlerRoutedMotion.cpp
            src/parser/CParseHandlerScalarAggref.cpp
            src/parser/CParseHandlerScalarArrayComp.cpp
            src/parser/CParseHandlerScalarArrayRef.cpp
            src/parser/CParseHandlerScalarArrayRefIndexList.cpp
            src/parser/CParseHandlerScalarAssertConstraintList.cpp
            src/parser/CParseHandlerScalarBitmapBoolOp.cpp
            src/parser/CParseHandlerScalarBitmapIndexProbe.cpp
            src/parser/CParseHandlerScalarBooleanTest.cpp
            src/parser/CParseHandlerScalarBoolExpr.cpp
            src/parser/CParseHandlerScalarCaseTest.cpp
            src/parser/CParseHandlerScalarCast.cpp
            src/parser/CParseHandlerScalarCoalesce.cpp
            src/parser/CParseHandlerScalarCoerceToDomain.cpp
            src/parser/CParseHandlerScalarComp.cpp
            src/parser/CParseHandlerScalarConstValue.cpp
            src/parser/CParseHandlerScalarDMLAction.cpp
            src/parser/CParseHandlerScalarExpr.cpp
            src/parser/CParseHandlerScalarFuncExpr.cpp
            src/parser/CParseHandlerScalarIdent.cpp
            src/parser/CParseHandlerScalarIfStmt.cpp
            src/parser/CParseHandlerScalarInitPlan.cpp
            src/parser/CParseHandlerScalarLimitCount.cpp
            src/parser/CParseHandlerScalarLimitOffset.cpp
            src/parser/CParseHandlerScalarMinMax.cpp
            src/parser/CParseHandlerScalarNullIf.cpp
            src/parser/CParseHandlerScalarNullTest.cpp
            src/parser/CParseHandlerScalarOp.cpp
            src/parser/CParseHandlerScalarOpExpr.cpp
            src/parser/CParseHandlerScalarOpList.cpp
            src/parser/CParseHandlerScalarPartBound.cpp
            src/parser/CParseHandlerScalarPartBoundInclusion.cpp
            src/parser/CParseHandlerScalarPartBoundOpen.cpp
            src/parser/CParseHandlerScalarPartDefault.cpp
            src/parser/CParseHandlerScalarPartOid.cpp
            src/parser/CParseHandlerScalarSubPlan.cpp
            src/parser/CParseHandlerScalarSubPlanParam.cpp
            src/parser/CParseHandlerScalarSubPlanParamList.cpp
            src/parser/CParseHandlerScalarSubPlanTestExpr.cpp
            src/parser/CParseHandlerScalarSubquery.cpp
            src/parser/CParseHandlerScalarSubqueryExists.cpp
            src/parser/CParseHandlerScalarSubqueryQuantified.cpp
            src/parser/CParseHandlerScalarSwitch.cpp
            src/parser/CParseHandlerScalarSwitchCase.cpp
            src/parser/CParseHandlerScalarWindowFrameEdge.cpp
            src/parser/CParseHandlerScalarWindowRef.cpp
            src/parser/CParseHandlerSearchStage.cpp
            src/parser/CParseHandlerSearchStrategy.cpp
            src/parser/CParseHandlerSequence.cpp
            src/parser/CParseHandlerSharedScan.cpp
            src/parser/CParseHandlerSort.cpp
            src/parser/CParseHandlerSortCol.cpp
            src/parser/CParseHandlerSortColList.cpp
            src/parser/CParseHandlerStackTrace.cpp
            src/parser/CParseHandlerStatistics.cpp
            src/parser/CParseHandlerStatisticsConfig.cpp
            src/parser/CParseHandlerStatsBound.cpp
            src/parser/CParseHandlerStatsDerivedColumn.cpp
            src/parser/CParseHandlerStatsDerivedRelation.cpp
            src/parser/CParseHandlerSubqueryScan.cpp
            src/parser/CParseHandlerTableDescr.cpp
            src/parser/CParseHandlerTableScan.cpp
            src/parser/CParseHandlerTraceFlags.cpp
            src/parser/CParseHandlerUtils.cpp
            src/parser/CParseHandlerWindowFrame.cpp
            src/parser/CParseHandlerWindowKey.cpp
            src/parser/CParseHandlerWindowKeyList.cpp
            src/parser/CParseHandlerWindowSpec.cpp
            src/parser/CParseHandlerWindowSpecList.cpp
            src/parser/CParseHandlerXform.cpp
            src/statistics/CBucket.cpp
            src/statistics/CHistogram.cpp
            src/statistics/CPoint.cpp
            src/statistics/CScaleFactorUtils.cpp
            src/statistics/CStatistics.cpp
            src/statistics/CStatisticsUtils.cpp
            src/statistics/CStatsPredConj.cpp
            src/statistics/CStatsPredDisj.cpp
            src/statistics/CStatsPredLike.cpp
            src/statistics/CStatsPredPoint.cpp
            src/statistics/CStatsPredUnsupported.cpp
            src/statistics/CStatsPredUtils.cpp
            src/statistics/CUpperBoundNDVs.cpp
            src/xml/CDXLMemoryManager.cpp
            src/xml/CDXLSections.cpp
            src/xml/CXMLSerializer.cpp
            src/xml/dxltokens.cpp)

target_link_libraries(naucrates
                      ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS}
                      ${GPOS_LIBRARIES}
                      ${XERCES_LIBRARIES}
                      ${GPORCA_SOLARIS_EXTRA_LIBS})

# Prevent linker errors from undefined symbols on OSX.
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  set_target_properties(naucrates PROPERTIES
                        LINK_FLAGS "-undefined dynamic_lookup")
endif()

set_target_properties(naucrates PROPERTIES
                      SOVERSION ${GPORCA_ABI_VERSION}
                      VERSION ${GPORCA_VERSION_STRING})

install(TARGETS naucrates DESTINATION lib)
install(DIRECTORY include/naucrates DESTINATION include)
